--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     <title>Harsh's Website</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" media="screen and (max-width: 900px)" href="phone.css">
+    <link rel="icon" href="profile-pic (6).png">
 </head>
 <body>
     <nav id="navbar">
         <profie id="small_profile">
-            <img src="profile-pic.png" alt="" id="logo">
+            <img src="rofile-pic (6).png" alt="" id="logo">
             <element>Harsh Kaushik</element>
         </profie>
         <ul class="nav_list">
