added tab bar icon

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <nav id="navbar">
         <profie id="small_profile">
-            <img src="rofile-pic (6).png" alt="" id="logo">
+            <img src="profile-pic (6).png" alt="" id="logo">
             <element>Harsh Kaushik</element>
         </profie>
         <ul class="nav_list">
