--- a/index.html
+++ b/index.html
@@ -5,87 +5,105 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Harsh's Website</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" media="screen and (max-width: 900px)" href="phone.css">
-    <link rel="icon" href="profile-pic (6).png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"/>
+    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" media="screen and (max-width: 900px)" href="./css/phone.css">
+    <link rel="icon" href="./img/profile-pic (6).png">
+    <script src="https://kit.fontawesome.com/7374ee0e78.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    <nav id="navbar">
-        <profie id="small_profile">
-            <img src="profile-pic (6).png" alt="" id="logo">
-            <element>Harsh Kaushik</element>
-        </profie>
-        <ul class="nav_list">
-            <li class="nav_element" ><a href="#main">Home</a></li>
-            <li class="nav_element" > <a href="#main">About Me</a></li>
-            <li class="nav_element" ><a href="#hobbies">Hobbies</a></li>
-            <li class="nav_element" ><a href="#socials">Socials</a></li>
+    <nav class="navbar">
+        <div class="small_profile">
+            <div class="">
+                <img src="./img/profile-pic (6).png" alt="" id="logo">
+            </div>
+            <div>
+                <span style="margin: 0 0 0 15px; text-transform: uppercase;color: white;">Harsh Kaushik</span>
+            </div>
+        </div>
+        <div class="nav_list">
+        <ul>
+            <li class="nav_element"><a href="#main">Home</a></li>
+            <li class="nav_element"><a href="#main">About Me</a></li>
+            <li class="nav_element"><a href="#hobbies">Hobbies</a></li>
+            <li class="nav_element"><a href="#socials">Socials</a></li>
+            <li class="nav_element"><a href="https://incrediblenura.github.io/">Arun Kaushik</a></li>
         </ul>
-    </nav>
-    <div>
-        <h3>
-            <hr>
-            About Me
-            <hr>
-        </h3>
     </div>
+    </nav>
+
 <section id="section">
     <div id="main">
-      
-    <main>
-        <img src="profile-pic (6).png" alt="" id="mainimg">
-        <p id="aboutmepara"> <span>Harsh Kaushik <br></span> <br> Hello Everyone, <br> I am Harsh Kaushik a student of class twelfth and a programmer in making.I love programming and I ❤️ Pyhon, Java, JavaScript, C++, C and many other programming languages. </p>
-    </main>
-    </div>
-    <div>
-        <h3>
-            <hr>
-            Hobbies
-            <hr>
-        </h3>
+        <div class="aboutme">
+            <div>
+                <h3>
+                    About Me
+                </h3>
+            </div>
+        </div>
+        <div class="container">
+            <div class="img_cont">
+                <img src="./img/profile-pic (6).png" alt="" id="mainimg"/>
+            </div>
+            <div id="aboutmepara">
+                <div>
+                    <p>Hello Everyone,</p>
+                </div>
+            <div>
+                <p>I am Harsh Kaushik a student of class twelfth and a programmer in making. I love programming and I ❤️</p> 
+                    <ul>
+                        <li><i class="devicon-python-plain colored"></i> Python</li>
+                        <li><i class="devicon-java-plain-wordmark colored"></i> Java,</li>
+                        <li><i class="devicon-javascript-plain colored"></i> JavaScript</li>
+                        <li><i class="devicon-cplusplus-plain colored"></i> C++</li>
+                        <li><i class="devicon-c-plain colored"></i> C</li>
+                    </ul>
+                        <p>and many other programming languages.</p>
+                </div>
+            </div>
+        </div>
     </div>
     <div id="hobbies">
-        
+        <div>
+            <h3>Hobbies</h3>
+        </div>
+        <div class="hobbiesbody">
         <div id="hobbie1" class="hobbiediv">
             <h4 class="hobbiedivheading"> Coding</h4>
-            <p>Hello Everyone, <br> I think you all know that I love programming and I have made this website using HTML, CSS and it is a Static Website because I don't know JavaScript yet. I am learning Javascript, Python and Java. <a href="coding.html">know more</a> </p>
+            <p>Hello Everyone, <br> I think you all know that I love programming and I have made this website using HTML, CSS and it is a Static Website because I don't know JavaScript yet. I am learning Javascript, Python and Java. <br> <a href="./public/coding.html">Know more &rarr;</a> </p>
         </div>
         <div id="hobbie2" class="hobbiediv">
             <h4 class="hobbiedivheading"> Reading </h4>
-            <p>I am not a hardcore reader, I read once in a while. I have read many books some of which are Turning Points by Dr. APJ Abdul Kalam, How to win friends and Influence people by Dale Carnigie. <a href="reading.html">know more</a> </p>
+            <p>I am not a hardcore reader, I read once in a while. I have read many books some of which are Turning Points by Dr. APJ Abdul Kalam, How to win friends and Influence people by Dale Carnigie. <a href="./public/reading.html">Know more &rarr;</a> </p>
         </div>
         <div id="hobbie3" class="hobbiediv">
             <h4 class="hobbiedivheading"> Tabla</h4>
-            <p>Yes, I like to play tabla and I have gone to many national and state competition for tabla. <a href="hobbie2.html">know more</a> </p>
+            <p>Yes, I like to play tabla and I have gone to many national and state competition for tabla. <a href="./public/hobbie2.html">Know more &rarr;</a> </p>
         </div>
     </div>
-    <div>
-        <h3>
-            <hr>
-            Socials
-            <hr>
-        </h3>
     </div>
     <div id="socials">
+        <div>
+            <h3>Socials</h3>
+        </div>
+        <div class="social">
         <div class="socialsdiv" id="social1">
-            <img src="instagram.png" alt="">
-            <p>Although I am not very active on Instagram but yaha kuch daalna tha toh daal diya. You can see my Instagram account only if you follow me and If you follow or want to follow me <a href="https://www.instagram.com/harsh_kaushik31/">click here.</a> </p>
+            <img src="./img/instagram.png" alt="">
+            <p>Although I am not very active on Instagram but yaha kuch daalna tha toh daal diya. You can see my Instagram account only if you follow me and If you follow or want to follow me <br><a href="https://www.instagram.com/harsh_kaushik31/">Click here.</a> &rarr;</p>
         </div>
         <div class="socialsdiv" id="social2">
-            <img src="facebook.png" alt="">
-            <p> I do not use Facebook. Kuch nahi mila toh daal diya par agar aapka Facebook account hai aur chahte ho ki main Facebook par aau toh niche diye gaye link se poll par vote kar dena. <a href="facebook.html">Poll</a> </p>
+            <img src="./img/facebook.png" alt="">
+            <p> I do not use Facebook. Kuch nahi mila toh daal diya par agar aapka Facebook account hai aur chahte ho ki main Facebook par aau toh niche diye gaye link se poll par vote kar dena. <br><a href="facebook.html">Poll</a> &rarr;</p>
         </div>
         <div class="socialsdiv" id="social3">
-            <img src="connection.png" alt="">
-            <p>Many of you don't know that I use twitter also but again I am not very active on Twitter also. One day I felt that I should have a twitter account so I got one and yes, Yuvraj is one of my names.<a href="https://twitter.com/YuvrajK31032005">Visit Twitter</a> </p>
+            <img src="./img/connection.png" alt="">
+            <p>Many of you don't know that I use twitter also but again I am not very active on Twitter also. One day I felt that I should have a twitter account so I got one and yes, Yuvraj is one of my names. <br> <a href="https://twitter.com/YuvrajK31032005">Visit Twitter</a> &rarr;</p>
         </div>
-
+    </div>
     </div>
 </section>
-<hr>
-<footer>
-    This website was made by Harsh Kaushik to see the code <a href="https://github.com/harshkaushik31/mywebsite">click here.</a>
+<footer class="footer">
+   <p>This website was made by Harsh Kaushik &copy; <span id="year" ></span><script>document.getElementById("year").innerText = new Date().getFullYear();</script></span> <a href="https://github.com/harshkaushik31/mywebsite">Click here</a> to see the code</p>
 </footer>
-<hr>
 </body>
 </html>
